@@ -1,3 +1,9 @@
+2010-09-13  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-charset.c: Mark known_iconv_charsets[] as
+	static. Also mark string members of various private structs as
+	const.
+
 2010-09-06  Jeffrey Stedfast  <fejj@novell.com>
 
 	* configure.ac: Bump glib version requirement for
